--- a/Clase9/index.html
+++ b/Clase9/index.html
@@ -5,19 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 
 
-    <h1 id="titulo">Bienvenidos a la clase de JavaScript</h1>
+ <!--    <h1 id="titulo">Bienvenidos a la clase de JavaScript</h1>
 
 
     <div id="padre">  </div>
 
     <button id="boton">asd</button>
+ -->
+
+ <!-- <button id="boton">click aca</button> -->
 
 
+<!-- <h1 id="titulo">hola, este es el titulo</h1>
+
+
+<div class="pepito" id="jose"></div> -->
+
+<input type="text" id="miCampoDeTexto">
 
     <script src="main.js"></script>
 </body>
